--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"aperricone.harbour",
+		"aperricone.harbour@1.0.3",
 		"actboy168.tasks"
 	],
 
